--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "express": "^4.16.4",
     "mongoose": "^5.3.8"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
